[project]
name = "blackhole"
version = "1.2"
description = ""
authors = [
    {name = "LucasFujarra",email = "lucasfujarra1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.42.0,<2.0.0)",
    "pytubefix (>=8.12.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
