[project]
name = "blackhole"
version = "1.2"
description = "video downloader"
authors = [
    {name = "LucasFujarra"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytubefix (>=8.12.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
